--- a/system2/src/LecStudentdashbord.form
+++ b/system2/src/LecStudentdashbord.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1275" height="488"/>
+      <xy x="20" y="20" width="1275" height="527"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,7 +52,7 @@
             <properties>
               <background color="-66049"/>
               <font size="72" style="1"/>
-              <text value="DASHBORD"/>
+              <text value="STUDENT DASHBORD"/>
             </properties>
           </component>
           <component id="c5f49" class="javax.swing.JLabel">
@@ -100,14 +100,14 @@
               <text value=""/>
             </properties>
           </component>
-          <grid id="6a217" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="6a217" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="13" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-66305"/>
-              <font size="72" style="3"/>
+              <font size="24" style="3"/>
             </properties>
             <border type="none"/>
             <children>
@@ -163,6 +163,15 @@
                 <properties>
                   <background color="-13922170"/>
                   <text value="Medical"/>
+                </properties>
+              </component>
+              <component id="f9d80" class="javax.swing.JButton" binding="backButton" default-binding="true">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13922170"/>
+                  <text value="back"/>
                 </properties>
               </component>
             </children>
