--- a/system2/src/Admindashbord.form
+++ b/system2/src/Admindashbord.form
@@ -26,7 +26,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="e681a" class="javax.swing.JLabel">
+              <component id="e681a" class="javax.swing.JLabel" binding="profilePicLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="4" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
