--- a/system2/src/Lecturdashbord.form
+++ b/system2/src/Lecturdashbord.form
@@ -108,7 +108,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="9400b" class="javax.swing.JButton" binding="coursesButton1" default-binding="true">
+          <component id="9400b" class="javax.swing.JButton" binding="coursesButton" default-binding="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
