--- a/system2/src/Admindashbord.form
+++ b/system2/src/Admindashbord.form
@@ -79,7 +79,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="69711" class="javax.swing.JLabel">
+              <component id="69711" class="javax.swing.JLabel" binding="adminUsernameLabel">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
