--- a/system2/src/Admindashbord.form
+++ b/system2/src/Admindashbord.form
@@ -84,8 +84,9 @@
                   <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <font name="Arial Black" size="16" style="1"/>
                   <foreground color="-131073"/>
-                  <text value="welcome"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
